# ROS2-Remote-Controller

./: CONTROLLER_HANDBOOK.md
camera/: README.md  stream_receiver.sh
desktop/: AIRA-Controller.desktop  AIRA-Mouse.desktop  README.md  RobotHex-Controller.desktop  aira-controller.sh  mouse-mode.sh  robothex-controller.sh
firmware/stm32/: README.md  ROS2controller.ino
firmware/stm32/ROS2controller/: ROS2controller.ino
src/aira_dashboard/: package.xml  setup.cfg  setup.py
src/aira_dashboard/aira_dashboard/: dashboard.py
src/aira_dashboard/launch/: aira.launch.py
src/joypad_controller/: package.xml  setup.cfg  setup.py
src/joypad_controller/joypad_controller/: L_joy_reader.py  R_joy_reader.py  cursor_node.py  joy_node.py  joypad_gui.py
src/joypad_controller/launch/: joypad.launch.py  mouse.launch.py
udev/: 99-aira-controller.rules  99-aira-uinput.rules
viz/: README.md
viz/aira/: aira_base.rviz  aira_base.urdf  display.launch.py
